<?xml version="1.0"?>
<package>
  <name>rospyd7a</name>
  <version>0.0.1</version>
  <description>The ros-pyd7a package</description>
  <maintainer email="ben.bellekens@uantwerpen.be">Ben Bellekens</maintainer>

  <license>Apache 2.0</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>